ros2_study/log/build_2025-11-11_11-37-06/my_first_package/stderr.log
  File "/home/hyh/ros2_study/install/my_first_package/lib/python3.10/site-packages/my_first_package/my_publisher.py", line 6
    	def __ init__(self):
    	       ^^^^^^
SyntaxError: invalid syntax

